Docker-build fails to detect podman
Fixes #41085